<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SignUp">



      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="150dp"
          android:src="@drawable/signup"
          android:layout_gravity="center"
          android:layout_marginTop="5dp"/>
   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:paddingRight="10dp"
       android:layout_marginTop="5dp"
       android:paddingLeft="10dp"
       app:startIconDrawable="@drawable/ic_baseline_email_24"
       android:layout_height="wrap_content">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:hint="@string/email"
          android:background="@color/white"
          android:inputType="textEmailAddress" />
      <TextView
          android:visibility="invisible"
          android:id="@+id/requiredEmail"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Required*"
          tools:visibility="visible"
          android:textColor="@color/red"
          android:layout_margin="5dp"   />
   </com.google.android.material.textfield.TextInputLayout>

   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:paddingRight="10dp"
       android:paddingLeft="10dp"
       android:layout_marginTop="5dp"
       app:startIconDrawable="@drawable/ic_baseline_security_24"
       app:passwordToggleEnabled="true">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/password"
          android:background="@color/white"
          android:inputType="textPassword"
          />
         <TextView
             android:id="@+id/requiredPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
             android:text="Required*"
             android:textColor="@color/red"
             android:visibility="invisible"
             tools:visibility="visible"
             />

   </com.google.android.material.textfield.TextInputLayout>
   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:paddingRight="10dp"
       android:paddingLeft="10dp"
       android:layout_marginTop="5dp"
       app:startIconDrawable="@drawable/ic_baseline_security_24"
       app:passwordToggleEnabled="false">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/matchedPassword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/repassword"
          android:background="@color/white"
          android:inputType="textPassword"
          />
      <TextView
          android:id="@+id/requiredMathchedPassword"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="5dp"
          android:layout_marginTop="5dp"
          android:layout_marginEnd="5dp"
          android:layout_marginBottom="5dp"
          android:text="Required*"
          android:textColor="@color/red"
          android:visibility="invisible"
          tools:visibility="visible" />

   </com.google.android.material.textfield.TextInputLayout>
      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingRight="10dp"
          android:paddingLeft="10dp"
          android:layout_marginTop="5dp"
          app:startIconDrawable="@drawable/ic_baseline_smartphone_24"
          >
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/phoneNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:inputType="phone"
             android:hint="@string/phone"
             />
         <TextView
             android:id="@+id/requiredPhone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
             android:text="Required*"
             android:textColor="@color/red"
             android:visibility="invisible"
             tools:visibility="visible" />
      </com.google.android.material.textfield.TextInputLayout>
   <TextView
       android:id="@+id/wrong"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:visibility="invisible"
       tools:visibility="visible"
       android:gravity="center"
       android:text="E-mail or password is wrong*"
       android:layout_gravity="center"
       android:textColor="@color/red"/>
   <TextView
       android:layout_marginTop="5dp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="or, sign up with.."
       android:layout_gravity="center"/>


   <androidx.cardview.widget.CardView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:cardElevation="10dp"
       android:layout_margin="10dp"
       android:background="@color/white"
       app:cardCornerRadius="10dp"
       android:layout_gravity="center">

      <ImageView

          android:id="@+id/gmaillogin"
          android:layout_width="60dp"
          android:layout_height="60dp"
          android:scaleType="centerCrop"

          android:src="@drawable/gmail" />
   </androidx.cardview.widget.CardView>
      <Button
          android:layout_width="match_parent"
          android:layout_marginTop="5dp"
          android:layout_marginLeft="20dp"
          android:layout_marginRight="20dp"
          android:padding="15dp"
          android:background="@drawable/button_radius"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginBottom="10dp"
          android:text="@string/sign_up"
          android:id="@+id/signup"/>





</LinearLayout>