<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:orientation="vertical"
        android:layout_marginEnd="@dimen/_25sdp"
        android:background="@drawable/edge">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_50sdp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"><com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_marginTop="@dimen/_25sdp"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:drawableStart="@drawable/ic_baseline_email_24"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_marginTop="@dimen/_20sdp"
                android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:drawableStart="@drawable/ic_baseline_security_24"
            />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center"
            android:id="@+id/login"/>
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="If you have not an email you can "
                android:textSize="17sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SignUp"
                android:textSize="17sp"
                android:textColor="@color/blue"
                android:textStyle="bold"/>
        </LinearLayout>
        <TextView
            android:id="@+id/forget"
            android:layout_marginTop="17dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forget password?"
            android:layout_gravity="center"
            android:textSize="17sp"
            android:textColor="@color/blue"
            android:textStyle="bold"/>
<LinearLayout
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/_10sdp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ImageView
        android:layout_width="@dimen/_64sdp"
        android:layout_height="@dimen/_64sdp"
        android:src="@drawable/facebook"
        android:layout_margin="@dimen/_17sdp"
        android:id="@+id/facebook_login"/>
    <ImageView
        android:layout_width="@dimen/_64sdp"
        android:layout_height="@dimen/_64sdp"
        android:src="@drawable/gmail"
        android:layout_margin="@dimen/_17sdp"
        android:id="@+id/gmail_login"/>
</LinearLayout>
    </LinearLayout>


</LinearLayout>